[project]
name = "Epic7Luna"
version = "0.1.0"
description = "Automation for Epic 7"
authors = [{ name = "Omar", email = "omar@ztasecurity.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.1",
    "mouseinfo>=0.1.3,<0.2",
    "numpy>=2.2.5,<3",
    "opencv-python>=4.10.0.84,<5",
    "pillow>=10.4.0,<13",
    "pure-python-adb>=0.3.0.dev0,<0.4",
    "pyautogui>=0.9.54,<0.10",
    "pygetwindow>=0.0.9,<0.0.10",
    "pymsgbox>=1.0.9,<2",
    "pyperclip>=1.9.0,<2",
    "pyrect>=0.2.0,<0.3",
    "pyscreeze>=0.1.30,<0.2",
    "pytweening>=1.2.0,<2",
    "pyyaml>=6.0.2,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
